--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.93"
 midir = "0.10.1"
+serde = "1.0.215"
+serde_json = "1.0.133"
 slint = "1.8.0"
+thiserror = "2.0.4"
+tokio = { version = "1.42.0", features = ["full"] }
 
 [build-dependencies]
 slint-build = "1.8.0"
