--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.93"
 clipboard = "0.5.0"
+csv = "1.3.1"
 flume = "0.11.1"
 midir = "0.10.1"
 serde = "1.0.215"
